--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,33 @@
-__pycache__
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# SQLite database
+*.db
+
+# Virtual environment
+venv/
+.env/
+
+# IDE
+.idea/
+.vscode/
