--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,17 @@
 [tool.poetry]
 name = "flask-service"
 version = "0.1.0"
-description = "A Flask service with healthcheck endpoint"
+description = "Flask template project"
 authors = ["Your Name <your.email@example.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-flask = "^2.3.3"
-pydantic = "^2.9.2"
-email-validator = "^2.2.0"
+flask = "^2.0.0"
+pydantic = {extras = ["email"], version = "^2.9.2"}
+SQLAlchemy = "^2.0.0"
 
-[tool.poetry.group.dev.dependencies]
-pytest = "^7.4.0"
-pytest-flask = "^1.2.0"
+[tool.poetry.dev-dependencies]
+pytest = "^7.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
